-- =============================================================================
-- Esquema AgroManager para Oracle Database (Autonomous DB / 19c+)
-- Diferencias respecto a la versión MySQL original:
--   * AUTO_INCREMENT  -> GENERATED BY DEFAULT AS IDENTITY
--   * VARCHAR         -> VARCHAR2
--   * TEXT            -> CLOB
--   * TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP -> DEFAULT SYSTIMESTAMP
--   * ON UPDATE CURRENT_TIMESTAMP no existe -> se maneja con trigger genérico.
--   * ENGINE=InnoDB / charset se eliminan (Oracle usa AL32UTF8 a nivel de BD).
--   * CREATE TABLE IF NOT EXISTS no existe -> ejecutar sobre un esquema limpio
--     o envolver cada CREATE en un bloque PL/SQL con manejo de excepciones.
--
-- Ejecutar conectado al esquema de la aplicación (p.ej. ADMIN o un user dedicado).
-- =============================================================================

-- =============================================================================
-- Tablas
-- =============================================================================

CREATE TABLE usuarios (
  id            NUMBER(10)        GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre        VARCHAR2(120)     NOT NULL,
  email         VARCHAR2(160)     NOT NULL,
  password_hash VARCHAR2(255)     NOT NULL,
  rol           VARCHAR2(40)      DEFAULT 'admin'  NOT NULL,
  estado        VARCHAR2(40)      DEFAULT 'Activo' NOT NULL,
  created_at    TIMESTAMP         DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at    TIMESTAMP         NULL,
  CONSTRAINT uq_usuarios_email UNIQUE (email)
);

CREATE TABLE parcelas (
  id          NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre      VARCHAR2(120) NOT NULL,
  hectareas   NUMBER(10,2),
  cultivo     VARCHAR2(80),
  estado      VARCHAR2(40)  DEFAULT 'Activa' NOT NULL,
  inversion   NUMBER(12,2)  DEFAULT 0 NOT NULL,
  usuario_id  NUMBER(10),
  created_at  TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at  TIMESTAMP,
  CONSTRAINT fk_parcelas_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE trabajadores (
  id                NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre            VARCHAR2(120) NOT NULL,
  cargo             VARCHAR2(80),
  salario           NUMBER(12,2)  DEFAULT 0 NOT NULL,
  horas_trabajadas  NUMBER(10)    DEFAULT 0 NOT NULL,
  estado            VARCHAR2(40)  DEFAULT 'Activo' NOT NULL,
  usuario_id        NUMBER(10),
  created_at        TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at        TIMESTAMP,
  CONSTRAINT fk_trabajadores_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE ingresos (
  id          NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  concepto    VARCHAR2(160) NOT NULL,
  monto       NUMBER(12,2)  NOT NULL,
  fecha       DATE          NOT NULL,
  tipo        VARCHAR2(40)  NOT NULL,
  parcela_id  NUMBER(10),
  usuario_id  NUMBER(10),
  created_at  TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_ingresos_parcela FOREIGN KEY (parcela_id) REFERENCES parcelas(id) ON DELETE SET NULL,
  CONSTRAINT fk_ingresos_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE egresos (
  id          NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  concepto    VARCHAR2(160) NOT NULL,
  monto       NUMBER(12,2)  NOT NULL,
  fecha       DATE          NOT NULL,
  tipo        VARCHAR2(40)  NOT NULL,
  categoria   VARCHAR2(80),
  usuario_id  NUMBER(10),
  created_at  TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_egresos_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE maquinaria (
  id                     NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre                 VARCHAR2(160) NOT NULL,
  tipo                   VARCHAR2(80)  NOT NULL,
  estado                 VARCHAR2(40)  DEFAULT 'Operativo' NOT NULL,
  ultimo_mantenimiento   DATE,
  proximo_mantenimiento  DATE,
  usuario_id             NUMBER(10),
  created_at             TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_maquinaria_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE semillas (
  id          NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tipo        VARCHAR2(160) NOT NULL,
  cantidad    VARCHAR2(40),
  proveedor   VARCHAR2(120),
  costo       NUMBER(12,2)  DEFAULT 0 NOT NULL,
  usuario_id  NUMBER(10),
  created_at  TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_semillas_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

-- Nota: el código de plagas.service.js usa columnas distintas a la versión
-- MySQL del schema original. Se aliñea aquí al uso real del backend.
CREATE TABLE plagas (
  id           NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cultivo      VARCHAR2(120),
  tipo         VARCHAR2(120),
  severidad    VARCHAR2(40),
  tratamiento  VARCHAR2(160),
  fecha_detec  DATE,
  usuario_id   NUMBER(10),
  created_at   TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_plagas_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE riego (
  id             NUMBER(10)   GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  parcela_id     NUMBER(10),
  tipo           VARCHAR2(80),
  ultimo_riego   DATE,
  proximo_riego  DATE,
  consumo_agua   VARCHAR2(40),
  usuario_id     NUMBER(10),
  created_at     TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_riego_parcela FOREIGN KEY (parcela_id) REFERENCES parcelas(id) ON DELETE SET NULL,
  CONSTRAINT fk_riego_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE fertilizantes (
  id                NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre            VARCHAR2(160) NOT NULL,
  cantidad          VARCHAR2(40),
  fecha_aplicacion  DATE,
  parcela_id        NUMBER(10),
  costo             NUMBER(12,2)  DEFAULT 0 NOT NULL,
  usuario_id        NUMBER(10),
  created_at        TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_fertilizantes_parcela FOREIGN KEY (parcela_id) REFERENCES parcelas(id) ON DELETE SET NULL,
  CONSTRAINT fk_fertilizantes_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE campanas (
  id                  NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre              VARCHAR2(160) NOT NULL,
  fecha_inicio        DATE          NOT NULL,
  fecha_fin           DATE          NOT NULL,
  hectareas           NUMBER(10,2),
  lotes               NUMBER(10),
  inversion_total     NUMBER(12,2)  DEFAULT 0 NOT NULL,
  gastos_operativos   NUMBER(12,2)  DEFAULT 0 NOT NULL,
  ingreso_total       NUMBER(12,2)  DEFAULT 0 NOT NULL,
  rendimiento_ha      NUMBER(10,2),
  produccion_total    NUMBER(12,2),
  usuario_id          NUMBER(10),
  created_at          TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_campanas_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE campanas_diario (
  id                   NUMBER(10)   GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  campana_id           NUMBER(10)   NOT NULL,
  fecha                DATE         NOT NULL,
  hectareas_cortadas   NUMBER(10,2),
  bultos               NUMBER(10),
  notas                VARCHAR2(255),
  usuario_id           NUMBER(10),
  created_at           TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_campanas_diario_campana FOREIGN KEY (campana_id) REFERENCES campanas(id) ON DELETE CASCADE,
  CONSTRAINT fk_campanas_diario_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE remisiones (
  id                NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  campana_id        NUMBER(10)    NOT NULL,
  fecha             DATE          NOT NULL,
  nombre_conductor  VARCHAR2(160),
  cc_conductor      VARCHAR2(40),
  vehiculo_placa    VARCHAR2(40),
  origen            VARCHAR2(160),
  destino           VARCHAR2(160),
  cantidad          VARCHAR2(80),
  variedad          VARCHAR2(80),
  tel_conductor     VARCHAR2(40),
  tel_propietario   VARCHAR2(40),
  valor_flete       NUMBER(12,2),
  enviado_por       VARCHAR2(160),
  enviado_cc        VARCHAR2(40),
  firma_conductor   VARCHAR2(160),
  firma_propietario VARCHAR2(160),
  nota              VARCHAR2(255),
  usuario_id        NUMBER(10),
  created_at        TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_remisiones_campana FOREIGN KEY (campana_id) REFERENCES campanas(id) ON DELETE CASCADE,
  CONSTRAINT fk_remisiones_usuario FOREIGN KEY (usuario_id) REFERENCES usuarios(id) ON DELETE SET NULL
);

CREATE TABLE cambios (
  id          NUMBER(10)    GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  titulo      VARCHAR2(160) NOT NULL,
  descripcion CLOB          NOT NULL,
  tipo        VARCHAR2(40)  DEFAULT 'novedad' NOT NULL,
  creado_por  NUMBER(10),
  created_at  TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_cambios_usuario FOREIGN KEY (creado_por) REFERENCES usuarios(id) ON DELETE SET NULL
);

-- =============================================================================
-- Triggers para mantener updated_at (Oracle no tiene ON UPDATE CURRENT_TIMESTAMP)
-- =============================================================================

CREATE OR REPLACE TRIGGER trg_usuarios_upd
BEFORE UPDATE ON usuarios
FOR EACH ROW
BEGIN
  :NEW.updated_at := SYSTIMESTAMP;
END;
/

CREATE OR REPLACE TRIGGER trg_parcelas_upd
BEFORE UPDATE ON parcelas
FOR EACH ROW
BEGIN
  :NEW.updated_at := SYSTIMESTAMP;
END;
/

CREATE OR REPLACE TRIGGER trg_trabajadores_upd
BEFORE UPDATE ON trabajadores
FOR EACH ROW
BEGIN
  :NEW.updated_at := SYSTIMESTAMP;
END;
/

-- =============================================================================
-- Índices recomendados (búsquedas multi-tenant por usuario_id)
-- =============================================================================

CREATE INDEX idx_parcelas_usuario       ON parcelas(usuario_id);
CREATE INDEX idx_trabajadores_usuario   ON trabajadores(usuario_id);
CREATE INDEX idx_ingresos_usuario       ON ingresos(usuario_id, fecha);
CREATE INDEX idx_egresos_usuario        ON egresos(usuario_id, fecha);
CREATE INDEX idx_maquinaria_usuario     ON maquinaria(usuario_id);
CREATE INDEX idx_semillas_usuario       ON semillas(usuario_id);
CREATE INDEX idx_plagas_usuario         ON plagas(usuario_id, fecha_detec);
CREATE INDEX idx_riego_usuario          ON riego(usuario_id);
CREATE INDEX idx_fertilizantes_usuario  ON fertilizantes(usuario_id, fecha_aplicacion);
CREATE INDEX idx_campanas_usuario       ON campanas(usuario_id, fecha_inicio);
CREATE INDEX idx_campanas_diario_camp   ON campanas_diario(campana_id, fecha);
CREATE INDEX idx_remisiones_camp        ON remisiones(campana_id, fecha);
CREATE INDEX idx_cambios_created        ON cambios(created_at);

-- =============================================================================
-- Datos de ejemplo (opcional)
-- Ajusta usuario_id al id real del owner que crees con `npm run db:seed-owner`.
-- =============================================================================

-- INSERT INTO parcelas (nombre, hectareas, cultivo, estado, inversion, usuario_id) VALUES ('Parcela Norte A', 12.5, 'Maíz', 'Activa', 25000, 1);
-- INSERT INTO parcelas (nombre, hectareas, cultivo, estado, inversion, usuario_id) VALUES ('Parcela Sur B', 8.3, 'Soja', 'En preparación', 18000, 1);
-- INSERT INTO trabajadores (nombre, cargo, salario, horas_trabajadas, estado, usuario_id) VALUES ('Juan Pérez', 'Operario', 2500, 160, 'Activo', 1);
-- COMMIT;
